manifests/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: postgres
  labels:
    name: postgres
---
apiVersion: v1
kind: Namespace
metadata:
  name: auth
  labels:
    name: auth
