manifests/auth_app_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-v1-deployment
  namespace: auth
  labels:
    app: auth-v1 

spec:
  replicas: 3

  selector:
    matchLabels:
      app: auth-v1  

  template:
    metadata:
      labels:
        app: auth-v1  

    spec:
      containers:
      - name: auth-v1-deployment
        image: zazama1/logapp:v4
        imagePullPolicy: Always
        ports:
        - containerPort: 8000

        resources:
          requests:
            memory: 128Mi
            cpu: 100m
          limits:
            memory: 512Mi
            cpu: 500m

        livenessProbe:
          tcpSocket:
            port: 8000
          initialDelaySeconds: 15
          periodSeconds: 30
          failureThreshold: 3

        readinessProbe:
          httpGet:
            path: /healthz
            port: 8000
          initialDelaySeconds: 5
          periodSeconds: 60
          timeoutSeconds: 3
          failureThreshold: 3
