manifests/postgres_statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: auth-postgres
  namespace: postgres
  labels:
    app: auth-postgres
spec:
  serviceName: auth-postgres
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec: 
      containers:
      - name: postgres
        image: postgres:15
        ports: 
        - containerPort: 5432
        volumeMounts:
        - name: postgres-data
          mountPath: /var/lib/postgresql/data
        resources: 
          requests:
            cpu: 100m
            memory: 256Mi
          limits:
            cpu: 500m
            memory: 512Mi
        livenessProbe:
          exec:
            command:
            - pg_isready
            - -U
            - auth
          initialDelaySeconds: 30
          periodSeconds: 60
        readinessProbe:
          exec:
            command:
            - pg_isready
            - -U
            - auth
          initialDelaySeconds: 5
          periodSeconds: 60
  volumeClaimTemplates:
  - metadata:
      name: postgres-data
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 5Gi
