manifests/auth_app_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-v1-service
  namespace: auth
  labels:
    app: auth-v1  
spec:
  type: ClusterIP
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
  selector:
    app: auth-v1
